fixed edge cases and added support for arithmetic.